# Back-end/User-API/src/server.ts
@@ -1,6 +1,6 @@
 import express from 'express';
 import swaggerRouter from './routes/swagger.route';
-import exerciseRouter from './routes/exercise.route';
+import userRouter from './routes/user.route';
 import pictureRouter from './routes/picture.route';
 import videoRouter from './routes/video.route';
 
@@ -17,13 +17,13 @@ export default class Server {
         //middlewares
         app.use(express.json());
         app.use(express.urlencoded({extended: false}));
-        app.use('/api/exercises', swaggerRouter);
-        app.use('/api/exercises', exerciseRouter);
+        app.use('/api/users', swaggerRouter);
+        app.use('/api/users', userRouter);
         app.use('/api/pictures', pictureRouter);
         app.use('/api/videos', videoRouter);
 
         app.listen(this.port, () => {
-            console.log('The Exercise-API is currently running at http://localhost:' ,this.port)
+            console.log('The User-API is currently running at http://localhost:' ,this.port)
         })
     }
 }
